holyc-parser/tests/corpus/passing/094-stmt-stmt-switch-case-auto.hc
U0 SE_swa() { I64 x=2; switch (x) { case 1: break; case : break; case : break; default: break; } }
