holyc-parser/tests/corpus/failing/017-surprises-surprise-switch-only-default.hc
U0 SE_swe() { I64 x=0; switch (x) { default: break; } }
